# opencv-android

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeCacheBoot  LICENSE  README.md  abi_settings.sh  android_build.sh  msys_pacman.txt  opencv_build.sh  settings.sh
sample-test/app/: build.gradle  proguard-rules.pro
sample-test/app/src/androidTest/java/monadic_software/sampletest/: ExampleInstrumentedTest.java
sample-test/app/src/main/: AndroidManifest.xml  CMakeLists.txt
sample-test/app/src/main/cpp/: CMakeLists.txt  main.cpp
sample-test/app/src/main/java/monadic_software/sampletest/: MainActivity.java
sample-test/app/src/main/jni/include/opencv2/: cvconfig.h
sample-test/app/src/main/jni/src/: jni_part.cpp  logger.cpp
sample-test/app/src/main/res/layout/: activity_main.xml
sample-test/app/src/main/res/values/: styles.xml
sample-test/app/src/test/java/monadic_software/sampletest/: ExampleUnitTest.java
sample-test/openCVLibrary320/: build.gradle
